--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,6 @@ name: CI Pipeline
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
   build:
@@ -16,10 +14,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js 12
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: See system config
+    - run: ls -l && whoami
